--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,7 @@ header h1 {
 /* Adjust the h2 element */
 .contact-page h2 {
     position: relative;
-    left: 520px; /* Move 520px to the right */
+    left: 32.1%; /* Move 32.1% to the right */
 }
 
 
