--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@ header h1 {
     display: flex;
     justify-content: center; /* Center horizontally */
     position: relative;
-    left: -110px; /* Shift 100px to the left */
+    left: -6.7%; /* Shift 100px to the left */
     padding: 20px; /* Optional padding */
 }
 
@@ -236,6 +236,7 @@ header h1 {
     position: relative;
     left: 32.1%; /* Move 32.1% to the right */
 }
+
 
 
 /* Additional Mobile Adjustments */
@@ -339,6 +340,7 @@ header h1 {
         padding: 10px; /* Add some padding */
         position: relative; /* Ensure correct positioning */
         width: 100%; /* Full width of viewport */
+		height: auto;
         box-sizing: border-box; /* Include padding and borders in width */
     }
 
@@ -349,6 +351,7 @@ header h1 {
         border: none; /* Ensure no border */
         box-sizing: border-box; /* Include padding and borders in width */
         display: block; /* Ensure it behaves as a block element */
+		overflow: hidden;
     }
 
     .contact-page h2 {
