--- a/styles.css
+++ b/styles.css
@@ -350,6 +350,7 @@ header h1 {
         border: none; /* Ensure no border */
         box-sizing: border-box; /* Include padding and borders in width */
         display: block; /* Ensure it behaves as a block element */
+		transform: scale(0.8);
     }
 
     .contact-page h2 {
