--- a/styles.css
+++ b/styles.css
@@ -351,6 +351,7 @@ header h1 {
         box-sizing: border-box; /* Include padding and borders in width */
         display: block; /* Ensure it behaves as a block element */
 		transform: scale(0.8);
+		bottom: -20%;
     }
 
     .contact-page h2 {
