--- a/styles.css
+++ b/styles.css
@@ -383,6 +383,10 @@ header h1 {
         font-size: 1.5em; /* Adjust font size */
 		left: 0;
     }
+	
+	.flag-image {
+		margin-left: 35%;
+	}
 }
 
 
